--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.1.4",
+    "@angular/animations": "^7.2.9",
     "@angular/cdk": "^7.3.4",
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
@@ -22,8 +22,11 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "@toverux/ngx-sweetalert2": "^4.0.0",
     "core-js": "^2.5.4",
+    "ngx-toastr": "^10.0.2",
     "rxjs": "~6.3.3",
+    "sweetalert2": "^7.33.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
