--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -13,6 +13,19 @@ spring:
         temp:
           use_jdbc_metadata_defaults: false
 
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username:
+    password:
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+            required: true
+
 logging:
   level:
     org:
