Add roles and view for sign in, reformat code

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -4,6 +4,7 @@ spring:
     username: postgres
     password: admin
     driverClassName: org.postgresql.Driver
+    initialization-mode: always
   jpa:
     hibernate:
       ddlAuto: create
