--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -17,8 +17,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: myownproject4@gmail.com
-    password: qmhvevxrilivxojg
+    username:
+    password:
     properties:
       mail:
         smtp:
