--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~7.1.0",
     "@toverux/ngx-sweetalert2": "^4.0.0",
     "core-js": "^2.5.4",
+    "ngx-cookie-service": "^2.1.0",
     "ngx-toastr": "^10.0.2",
     "rxjs": "~6.3.3",
     "sweetalert2": "^7.33.1",
