--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,8 @@
     "core-js": "^2.5.4",
     "ngx-cookie-service": "^2.1.0",
     "ngx-toastr": "^10.0.2",
-    "rxjs": "~6.3.3",
+    "rxjs": "^6.4.0",
+    "rxjs-compat": "^6.4.0",
     "sweetalert2": "^7.33.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
