--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^7.1.4",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.1.1",
     "@toverux/ngx-sweetalert2": "^4.0.0",
     "core-js": "^2.5.4",
     "ngx-cookie-service": "^2.1.0",
