--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -13,6 +13,10 @@ spring:
       hibernate:
         temp:
           use_jdbc_metadata_defaults: false
+  data:
+    web:
+      pageable:
+        max-page-size: 5
 
   mail:
     host: smtp.gmail.com
